name:                ODE
version:             0.1.0.0
synopsis:            Some numerical ODE solvers for Haskell practice
description:         Please see README.md
homepage:            https://github.com/eggplantbren/ODE#readme
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          Brendon J. Brewer
copyright:           2016 Brendon J. Brewer
category:            Science
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -O2
  exposed-modules:     ODE.Leapfrog,
                       ODE.Problem,
                       ODE.RungeKutta4,
                       ODE.Utils
  build-depends:       vector

executable Lorenz
  hs-source-dirs:      src
  main-is:             Lorenz.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ODE,
                       vector
  ghc-options:         -Wall -O2

executable Pendulum
  hs-source-dirs:      src
  main-is:             Pendulum.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ODE,
                       vector
  ghc-options:         -Wall -O2

